armor and elemental cloth

--- a/kubejs/changelog.txt
+++ b/kubejs/changelog.txt
@@ -2926,7 +2926,8 @@ Patch 0.3.2.1
     -Fixed Ancient Knight animal spawner recipe
     -Added for Frog in Animal Spawner
     -Added for Goat in Animal Spawner
-    -Addef for Glowsquid in Animal Spawner
+    -Added for Glowsquid in Animal Spawner
+    -Changed for Arcane Cloth
     
 
 ### Mob Balance:
