--- a/kubejs/changelog.txt
+++ b/kubejs/changelog.txt
@@ -2785,6 +2785,9 @@ Patch 0.3.2.1
     -Fyshi's Attributes
     -Simple Magnets
     -InGameNBTedit Reborn
+    -DimensionViewer
+    -SophisticatedStorageCreateIntegration
+    -ArmorDamageLimit
 
 ### Removed Items:
     -Silent Boots Cover
@@ -2830,6 +2833,7 @@ Patch 0.3.2.1
     -Charm of Keeping III
     -Silent Boots Cover
     -Removed all the new Create storage system components for now
+    -Dragonskin
 
 ### Changed Textures:
     -Wooden Crucifix (By Señor Random)
@@ -2928,6 +2932,16 @@ Patch 0.3.2.1
     -Added for Goat in Animal Spawner
     -Added for Glowsquid in Animal Spawner
     -Changed for Arcane Cloth
+    -Added for spawn eggs of:
+        -Blaze
+        -Zombie
+        -Skeleton
+        -Enderman
+        -Spider
+        -Creeper
+        -Wither Skeleton
+        -Slime
+        -Magma Cube
     
 
 ### Mob Balance:
@@ -2953,6 +2967,14 @@ Patch 0.3.2.1
     -Slightly Buffed the Wandering Magician Armor
     -Buffed the Electromancer Armor
     -Buffed the Shadowwalker Armor
+    -Buffed the Plagued Armor
+    -Buffed the Priest Armor
+    -Buffed the Cultist Armor
+    -Buffed the Pyromancer Armor
+    -Buffed the Cryomancer Armor
+    -Buffed the Archevoker Armor
+    -Rebalanced the Scarecrow Armor
+    -Rebalanced the Steeleaf Armor
     -Reworked Mining Hammers and Excavators
     -This Armor sets are now unbreakable:
         -Valkyrum
@@ -2984,3 +3006,4 @@ Patch 0.3.2.1
     -Bosses and Mini Bosses no longer work with drygmy
     -Bosses and Mini Bosses can no longer be caught with a quantum catcher
     -Waystones cant be broken with create drills and ars break spell 
+    -You can use TimeInABottle on Armorer's aid anymore
