--- a/kubejs/assets/spacetasb/lang/en_us.json
+++ b/kubejs/assets/spacetasb/lang/en_us.json
@@ -70,5 +70,6 @@
 	"tooltip.translation.spacecatasb.settitle.fiery": "Fiery",
 	"tooltip.translation.spacecatasb.settitle.phoenix": "Phoenix",
 	"tooltip.translation.spacecatasb.settitle.explorer": "Explorer",
-	"tooltip.translation.spacecatasb.settitle.bronze": "Bronze"								
+	"tooltip.translation.spacecatasb.settitle.bronze": "Bronze",
+	"tooltip.translation.spacecatasb.settitle.phantom": "Phantom"									
 }
