--- a/kubejs/changelog.txt
+++ b/kubejs/changelog.txt
@@ -2976,6 +2976,7 @@ Patch 0.3.2.1
     -Rebalanced the Scarecrow Armor
     -Rebalanced the Steeleaf Armor
     -Reworked Mining Hammers and Excavators
+    -Fixed Movement Speed nerfs/buffs on all the armor and traveler's belt
     -This Armor sets are now unbreakable:
         -Valkyrum
         -Etherium
